--- a/app/views/ads/new.html.erb
+++ b/app/views/ads/new.html.erb
@@ -1,5 +1,15 @@
-<h1>New Ad</h1>
+<section id="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
 
-<%= render 'form', ad: @ad %>
+					<h2>New Ad</h2>
 
-<%= link_to 'Back', ads_path %>
+					<%= render 'form', ad: @ad %>
+
+					<%= link_to 'Back', ads_path %>
+
+				</div>
+			</div>
+		</div>
+</section>
