--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,15 @@
-<h1>Editing User</h1>
+<section id="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+					<h2>Editing User</h2>
 
-<%= render 'form', user: @user %>
+					<%= render 'form', user: @user %>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+					<%= link_to 'Show', @user %> |
+					<%= link_to 'Back', users_path %>
+
+				</div>
+			</div>
+		</div>
+</section>
