--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -1,38 +1,48 @@
-<%= form_for(ad) do |f| %>
-  <% if ad.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(ad.errors.count, "error") %> prohibited this ad from being saved:</h2>
+<section id="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
 
-      <ul>
-      <% ad.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+                  <%= form_for(ad) do |f| %>
+                    <% if ad.errors.any? %>
+                      <div id="error_explanation">
+                        <h2><%= pluralize(ad.errors.count, "error") %> prohibited this ad from being saved:</h2>
+
+                        <ul>
+                        <% ad.errors.full_messages.each do |message| %>
+                          <li><%= message %></li>
+                        <% end %>
+                        </ul>
+                      </div>
+                    <% end %>
 
 
-  <div class="field">
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-  </div>
+                    <div class="field">
+                      <%= f.label :name %>
+                      <%= f.text_field :name %>
+                    </div>
 
-  <div class="field">
-    <%= f.label :description %>
-    <%= f.text_field :description %>
-  </div>
+                    <div class="field">
+                      <%= f.label :description %>
+                      <%= f.text_field :description %>
+                    </div>
 
-  <div class="field">
-    <%= f.label :price %>
-    <%= f.text_field :price %>
-  </div>
+                    <div class="field">
+                      <%= f.label :price %>
+                      <%= f.text_field :price %>
+                    </div>
 
-  <div class="field">
-    <%= f.label :address %>
-    <%= f.text_field :address %>
-  </div>
+                    <div class="field">
+                      <%= f.label :address %>
+                      <%= f.text_field :address %>
+                    </div>
 
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+                    <div class="actions">
+                      <%= f.submit %>
+                    </div>
+                  <% end %>
+  
+                </div>
+              </div>
+            </div>
+</section>
