--- a/app/views/ads/edit.html.erb
+++ b/app/views/ads/edit.html.erb
@@ -1,6 +1,16 @@
-<h1>Editing Ad</h1>
 
-<%= render 'form', ad: @ad %>
+<section id="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+					<h2>Editing Ad</h2>
 
-<%= link_to 'Show', @ad %> |
-<%= link_to 'Back', ads_path %>
+					<%= render 'form', ad: @ad %>
+
+					<%= link_to 'Show', @ad %> |
+					<%= link_to 'Back', ads_path %>
+
+				</div>
+			</div>
+		</div>
+</section>
