--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -1,35 +1,45 @@
-<p id="notice"><%= notice %></p>
 
-<h1>Les annonces</h1>
+<section id="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                <p id="notice"><%= notice %></p>
 
-<table>
-  <thead>
-    <tr>
-      <th>Utilisateur</th>
-      <th>Titre de l'article</th>
-      <th>Description de l'article</th>
-      <th>Prix</th>
-      <th>Lieu de rencontre</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+                  <h2>Les annonces</h2>
+                  <hr class="star-primary">
+                </div>
+            </div>
+                      <table>
+                      <thead>
+                        <tr>
+                            <th>Utilisateur</th>
+                            <th>Titre de l'article</th>
+                            <th>Description de l'article</th>
+                            <th>Prix</th>
+                            <th>Lieu de rencontre</th>
+                            <th colspan="3"></th>
+                      </tr>
+                     </thead>
 
-  <tbody>
-    <% @ads.each do |ad| %>
-      <tr>
-        <td><%= ad.user.first_name %> <%= ad.user.last_name %></td>
-        <td><%= ad.name %></td>
-        <td><%= ad.description %></td>
-        <td><%= ad.price %></td>
-        <td><%= ad.address %></td>
-        <td><%= link_to 'Show', ad %></td>
-        <td><%= link_to 'Edit', edit_ad_path(ad) %></td>
-        <td><%= link_to 'Destroy', ad, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+                    <tbody>
+                      <% @ads.each do |ad| %>
+                        <tr>
+                          <td> <%= link_to ad.user.first_name + " " + ad.user.last_name, user_path(ad.user) %></td>
+                          <td><%= ad.name %></td>
+                          <td><%= ad.description %></td>
+                          <td><%= ad.price %></td>
+                          <td><%= ad.address %></td>
+                          <td><%= link_to 'Show', ad %></td>
+                          <td><%= link_to 'Edit', edit_ad_path(ad) %></td>
+                          <td><%= link_to 'Destroy', ad, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                        </tr>
+                      <% end %>
+                    </tbody>
+                  </table>
 
-<br>
+                  <br>
 
-<%= link_to 'New Ad', new_ad_path %>
+                  <%= link_to 'New Ad', new_ad_path %>
+                
+        </div>
+</section>
