--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,33 +1,39 @@
-<p id="notice"><%= notice %></p>
+<section id="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                  <p id="notice"><%= notice %></p>
 
-<h1>Users</h1>
+                  <h2>Users</h2>
 
-<table>
-  <thead>
-    <tr>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>Email</th>
-      <th>Password</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+                  <table>
+                    <thead>
+                      <tr>
+                        <th>First name</th>
+                        <th>Last name</th>
+                        <th>Email</th>
+                        <th colspan="3"></th>
+                      </tr>
+                    </thead>
 
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.first_name %></td>
-        <td><%= user.last_name %></td>
-        <td><%= user.email %></td>
-        <td><%= user.password %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+                    <tbody>
+                      <% @users.each do |user| %>
+                        <tr>
+                          <td><%= user.first_name %></td>
+                          <td><%= user.last_name %></td>
+                          <td><%= user.email %></td>
+                          <td><%= link_to 'Show', user %></td>
+                          <td><%= link_to 'Edit', edit_user_path(user) %></td>
+                          <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                        </tr>
+                      <% end %>
+                    </tbody>
+                  </table>
 
-<br>
+                  <br>
 
-<%= link_to 'New User', new_user_path %>
+                  
+              </div>
+          </div>
+        </div>
+</section>
