--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,17 @@
-<h1>New User</h1>
+<section id="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+					<h2>New User</h2>
+					<hr class="star-primary">
 
-<%= render 'form', user: @user %>
 
-<%= link_to 'Back', users_path %>
+					<%= render 'form', user: @user %>
+
+					<%= link_to 'Back', root_path %>
+
+				</div>
+			</div>
+		</div>
+				
+</section>
